--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -25,6 +25,8 @@ def vertxVersion = '3.5.4'
 
 dependencies {
     compile "io.vertx:vertx-core:$vertxVersion"
+    compile "io.vertx:vertx-web:$vertxVersion"
+    compile "io.vertx:vertx-lang-js:$vertxVersion"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
