--- a/application/build.gradle
+++ b/application/build.gradle
@@ -24,12 +24,22 @@ sourceSets {
 def vertxVersion = '3.5.4'
 
 dependencies {
+    //vertx
     compile "io.vertx:vertx-core:$vertxVersion"
     compile "io.vertx:vertx-web:$vertxVersion"
     compile "io.vertx:vertx-lang-js:$vertxVersion"
 
+    //jackson json
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.4'
+
+    //Logger
+    compile group: 'org.tinylog', name: 'tinylog', version: '1.3.5'
+
+    //Testing
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile "io.vertx:vertx-unit:$vertxVersion"
+
+    //MySQL Database connection
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.12'
 }
